--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ target_sources(
 
 target_include_directories(
     ${PROJECT_NAME}
-    PUBLIC .
+    PUBLIC ${PROJECT_SOURCE_DIR}
 )
 
 target_link_libraries(
